# tsw-cli

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
agent/: aggregate.py  code.py  kb.py  report.py  research.py  settings.py  summary.py  think.py  topic_report.py  writer.py
lib/: pako.py  utils.py
mcp/: kb_exploer.py
