[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "foxgem", email = "jianhgreat@hotmail.com"},
]
license = {text = "GPL3"}
requires-python = "<4.0,>=3.12"
dependencies = [
    "typer<1.0.0,>=0.15.1",
    "agno<2.0.0,>=1.0.3",
    "markdown-pdf<2.0.0,>=1.3.3",
    "pydantic-settings<3.0.0,>=2.7.1",
    "pydantic-core<3.0.0,>=2.27.2",
    "pydantic<3.0.0,>=2.10.6",
    "python-dotenv<2.0.0,>=1.0.1",
    "duckduckgo-search<8.0.0,>=7.3.0",
    "resend<3.0.0,>=2.6.0",
    "markdown<4.0,>=3.7",
    "pypdf<6.0.0,>=5.2.0",
    "sqlalchemy<3.0.0,>=2.0.38",
    "pgvector<1.0.0,>=0.3.6",
    "psycopg[binary]<4.0.0,>=3.2.4",
    "googlesearch-python<2.0.0,>=1.3.0",
    "pycountry<25.0.0,>=24.6.1",
    "groq<1.0.0,>=0.18.0",
    "markdownify<1.0.0,>=0.14.1",
    "mcp<2.0.0,>=1.3.0",
    "google-genai>=1.3.0",
    "repomix>=0.2.2",
    "pymupdf4llm>=0.0.16",
]
name = "tsw-cli"
version = "0.1.0"
description = "tsw-cli"
readme = "README.md"

[dependency-groups]
dev = [
    "tsw-cli",
]

[tool.uv.sources]
tsw-cli = { workspace = true }

[tool.setuptools]
packages = ["lib", "agent"]
